# robo-arena

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Pipfile  README.md  SPRINTLOG.md  cog.toml  pyproject.toml  setup.cfg  setup.py  setup_whl.py
.github/workflows/: PythonChecks.yml  build.yml  build_wheels.yml  conventional-commits-check.yml  install-coq.sh  pages.yml  python-checks.yml
Snake/: snake.py
docs/sprintlogs/: sprintlog-1.md  sprintlog-2.md  sprintlog-3.md  sprintlog-4.md  sprintlog-5.md  sprintlog-6.md  sprintlog-7.md
perf_test/: a_star_perftest.py  bittests.py  frame_cache_test.py  perf_tester.py  perlin_noise_test.py  sample_points_test.py  spaceperftest.py  while_true.py
src/: game.py  index.py  move.py
src/client/: client.py  entity.py
src/rendering/: block.py  demo.py  entity.py  position.py  render_ctx.py  render_engine.py
src/roboarena/: index.py  rendering_interface.py
src/roboarena/client/: ambience_sound.py  client.py  entity.py  keys.py  master_mixer.py  settings.yml  util.py
src/roboarena/client/menu/: button.py  endscreen.py  main_menu.py  main_menue.py  menu.py  renderable.py  settings_menu.py  sprintlog5.md  text.py
src/roboarena/server/: enemy_ai.py  entity.py  events.py  room.py  server.py
src/roboarena/server/level_generation/: level_config.py  level_generator.py  level_generator_old.py  level_processing.py  test.json  tile.py  tileset.py  utils.py  wfc.py  wfc_new.py  wfc_test.py
src/roboarena/shared/: block.py  constants.py  custom_threading.py  entity.py  game.py  game_ui.py  network.py  time.py  types.py  util.py  weapon.py
src/roboarena/shared/raytracing/: optmp.py  raytracing.py  raytracingsppart.py  test.py  testmarch.py  tuple_util.py  util.py
src/roboarena/shared/rendering/: render_ctx.py  render_engine.py  renderer.py  util.py
src/roboarena/shared/utils/: perf_tester.py  perlin_nose.py  progress_bar.py  rect.py  search.py  statistics.py  system_utils.py  table_printer.py  timer.py  tuple_rect.py  tuple_vec.py  tuple_vector.py  vector.py
src/roboarena/utils/: utils.py  vector.py
src/roboarena/wfc/: block.py  level_processing.py  wfc.py
src/server/: entity.py  server.py
src/shared/: entity.py  game.py  network.py  rendering.py  time.py  types.py  util.py
src/wfc/: block.py  position.py  utils.py  wfc.py
test/: line_module.cpp  lt.py  pa.py  setup.py
tests/: a_star_test.py  bitwise_operations_test.py  matrix_test.py  passing_test.py  search_connected_test.py  tuple_vec_test.py  tuple_vector_test.py  vector_angle_test.py  vector_float_test.py  vector_int_test.py
