roboarena = "src"         # Point to the src directory
[project]
name = "roboarena"
version = "1.0.0"
authors = [
    {name = "Jan Keller"},
    {name = "Timon Martins"},
    {name = "Jules Oexle"},
]
description = "Python-utils will provide base level components to all python projects"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pygame~=2.5.2",
    "numpy~=1.26.4",
    "funcy~=2.0",
    "pyyaml~=6.0.1",
    "keyboard~=0.13.5",
    "bidict~=0.23.1",
    "more-itertools~=10.4.0",
    "matplotlib~=3.9.2",
    "attrs~=24.2.0"

]
[project.optional-dependencies]
dev = [
    "flake8==7.0.0",
    "flake8-bugbear~=24.4.26",
    "black~=24.4.0",
    "pytest~=8.1.1",
    "cx-freeze",
    "toml",
]
[tool.setuptools]
packages = {find = {where = ["src"]}}
package-dir = {"" = "src"}


[tool.setuptools.package-data]
"*" = ["*"]  


[build-system]
requires = ["setuptools>=61.0", "wheel", "pipenv"]
build-backend = "setuptools.build_meta"


