[metadata]
name = roboarena
version = 0.0.1
author = Jan Keller, Timon Martins, Jules Oexle  
description = Python-utils will provide base level components to all python projectsa
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/uni-tj/roboarena
project_urls =
    Bug Tracker = https://github.com/uni-tj/roboarena/issues
classifiers =
    Programming Language :: Python :: 3
    License :: GNU GPL 2
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.12

[options.packages.find]
where = src

[options.package_data]
roboarena =
    resources/graphics/*
    resources/sounds/*

[options.extras_require]
dev =
    cx_Freeze

; [options.data_files]
; Include the assets directory
; src/roboarena/resources = src/roboarena/resources/*